# core

./: .gitignore  01_PRODUCT_BRIEF.md  02_ARCHITECTURE.md  07_IMPLEMENTATION_PLAN_3DAY.md  CONTRIBUTING.md  LICENSE  METRICS_NOTATION.md  README.md
backend/:  03_METRICS_SPEC.md  README.md  pyproject.toml
backend/data/: example_arithmetic.jsonl
backend/scripts/: run_example.py  test_openai_runner.py
backend/tests/: __init__.py  test_error_handling.py  test_metrics.py  test_openai_runner.py  test_pipeline.py  test_progress.py
backend/zeta_reason/: __init__.py  config.py  exceptions.py  main.py  progress.py  schemas.py
backend/zeta_reason/evaluator/: __init__.py  pipeline.py
backend/zeta_reason/metrics/: __init__.py  core.py
backend/zeta_reason/models/: __init__.py  base.py  dummy_runner.py  openai_runner.py  provider_runner.py
backend/zeta_reason/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  deepseek_provider.py  glm_provider.py  google_provider.py  grok_provider.py  openai_provider.py  qwen_provider.py  registry.py
backend/zeta_reason/storage/: __init__.py  experiments.py
backend/zeta_reason/utils/: __init__.py  io.py
docs/: architecture.md  dataset_format.md  metrics_spec.md  research_mode.md  roadmap.md
docs/screenshots/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  experiments.ts
frontend/src/components/: CotViewer.tsx  DatasetUpload.tsx  ErrorBanner.tsx  ExperimentHistory.tsx  (+11 more)
test prompts/: example_arithmetic.jsonl
(+18 files in other folders)
